@@ -3,7 +3,6 @@ package com.example.taskmanage.config.filter;
 import com.example.taskmanage.dto.UserContextDto;
 import com.example.taskmanage.jwt.JwtConfig;
 import com.example.taskmanage.jwt.JwtService;
-import com.example.taskmanage.repository.UserRepository;
 import com.example.taskmanage.utils.BaseResponseDto;
 import com.example.taskmanage.utils.HelperUtils;
 import io.jsonwebtoken.Claims;
@@ -13,7 +12,6 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -32,9 +30,6 @@ public class JwtTokenAuthenticationFilter extends OncePerRequestFilter {
     private final JwtConfig jwtConfig;
 
     private final JwtService jwtService;
-
-    @Autowired
-    private UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -69,7 +64,7 @@ public class JwtTokenAuthenticationFilter extends OncePerRequestFilter {
                                         authorities
                                                 .stream()
                                                 .map(SimpleGrantedAuthority::new)
-                                                .collect(Collectors.toList()));
+                                                .toList());
 
                         SecurityContextHolder.getContext().setAuthentication(authenticationToken);
                     }
